# django-directed

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  dev.yml  docker-compose.yml  noxfile.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: constraints.txt  django.yml  release.yml  tests.yml
compose/django/: Dockerfile  entrypoint  start
django_directed/: admin.py  apps.py  components.py  config.py  context_managers.py  exceptions.py  fields.py  manager_methods.py  models.py  queryset_methods.py  urls.py  views.py
django_directed/models/: __init__.py  abstract_base_graph_models.py  abstract_base_models.py  abstract_graph_models.py  model_factory.py
docs/: about.md  building.md  concepts.md  conf.py  contributing.md  extending.md  index.md  installation.md  plugin_hooks.md  querying.md  requirements.txt  roadmap.md  terminology.md  usage.md
docs/advanced_usage/: contributing.md  extending.md
docs/api/: edge.md  graph.md  node.md  reference.md
docs/user_guide/: building.md  exporting.md  installation.md  manipulating.md  terminology.md
example_project/: settings.py  urls.py
example_project/example/: models.py
requirements/: base.txt  dev.txt  test.txt
src/django_directed/: __init__.py  admin.py  apps.py  config.py  context_managers.py  exceptions.py  fields.py  forms.py  manager_methods.py  model_methods.py  query_utils.py  queryset_methods.py  signals.py  tests.py  urls.py  validators.py  views.py
src/django_directed/models/: __init__.py  abstract_base_graph_models.py  abstract_graph_models.py  model_factory.py
src/django_directed/templates/django_directed/: base.html
src/django_directed/templatetags/: __init__.py
tests/: README.md  __init__.py  requirements.txt  settings.py  test_django_directed.py  test_models.py  test_with_docker_compose_playwright.py  urls.py
tests/example/: readme.md  urls.py
tests/example/airports/: admin.py  apps.py  models.py  readme.md  tests.py
tests/example/airports/dataset/: airlines.csv  airports.csv  routes.csv
tests/example/airports/management/commands/: clear_airports.py  insert_airports.py
tests/example/airports/migrations/: 0001_initial.py
tests/example/core/: apps.py  tests.py
tests/example/electrical_grids/: apps.py  readme.md
tests/example/family_tree/: apps.py
tests/example/family_trees/: apps.py  readme.md
tests/example/forums/: apps.py  readme.md
tests/example/networkx_graphs/: apps.py  readme.md
